# metaoptions

./: AUTHORS  ChangeLog  Makefile.am  MetaOptionsSetup.sln  MetaOptionsSetup.vdproj  configure  configure.ac
doc/: AmericanExchangeOption.3  AssetOrNothing.3  BAWAmericanApprox.3  BAWbisection.3  BSAmericanApprox  BSAmericanCallApprox.3  BSbisection.3  BinaryBarrier.3  CRRBinominal.3  CashOrNothing.3  ComplexChooser.3  ConvertibleBond.3  DiscreteAdjustedBarrier.3  DoubleBarrier.3  EquityLinkedFXO.3  EuropeanExchangeOption.3  ExchangeExchangeOption.3  Executive.3  ExtendibleWriter.3  ExtremeSpreadOption.3  FixedStrikeLookback.3  FloatingStrikeLookback.3  ForEquOptInDomCur.3  ForwardStartOption.3  GapOption.3  GarmanKohlhagen.3  GeometricAverageRateOption.3  ImpliedTrinominalTree.3  JumpDiffusion.3  LevyAsian.3  MiltersenSchwartz.3  NewtonRaphson.3  OptionsOnOptions.3  OptionsOnTheMaxMin.3  PartialFixedLB.3  PartialFloatLB.3  PartialTimeBarrier.3  Quanto.3  RollGeskeWhaley.3  SimpleChooser.3  (+40 more)
performance/: Log  Makefile  README  blackscholes.c  check_cnd.c  cnd.c  perf.h  result  src  stock_c.c
src/: AmericanExchangeOption.c  AssetOrNothing.c  BAWAmericanApprox.c  BAWbisection.c  BSAmericanApprox.c  BSbisection.c  BarrierBinominal.c  BinaryBarrier.c  CRRBinominal.c  CashOrNothing.c  ChangeLog  ComplexChooser.c  ConvertibleBond.c  DiscreteAdjustedBarrier.c  DoubleBarrier.c  EquityLinkedFXO.c  EuropeanExchangeOption.c  ExchangeExchangeOption.c  Executive.c  ExtendibleWriter.c  ExtremeSpreadOption.c  FixedStrikeLookback.c  FloatingStrikeLookback.c  ForEquOptInDomCur.c  (+61 more)
