AC_INIT(metaoptions, 0.0.4, bjorn.augestad@gmail.com)
AC_CONFIG_AUX_DIR([extras])
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([src/cbnd.c])

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_RANLIB

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

AC_CONFIG_FILES([Makefile ])
AC_OUTPUT

